Fix livefeedback reports not visible to livestream host

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -1881,6 +1881,10 @@ form[id^="smallpart-start"] {
 
   et2-details.lfReport {
 	min-width: 18em;
+
+	smallpart-livefeedback-report::part(report-list) {
+	  height: auto;
+	}
   }
   et2-details.lfReport::part(content) {
 	max-height: 400px;
